--- a/civil-work.html
+++ b/civil-work.html
@@ -420,7 +420,7 @@ nav {
 
     <!-- ⭐ ROW 1: RIGHT TOP MENU -->
     <div class="flex justify-end items-center space-x-8
-                text-gray-800 font-medium text-base py-3">
+                text-gray-800 font-medium text-lg py-3">
 
       <a href="index.html" class="hover:text-yellow-500 desktop-menu">Home</a>
       <a href="about.html" class="hover:text-yellow-500 desktop-menu">About Us</a>
@@ -443,7 +443,7 @@ nav {
 
     <!-- ⭐ ROW 2: CENTERED CATEGORIES -->
     <div class="flex justify-center items-center space-x-12
-                text-gray-900 font-semibold text-[15px] py-2 desktop-menu">
+                text-gray-900 font-semibold text-lg py-2 desktop-menu">
 
       <!-- Same dropdowns here -->
       <!-- FABRICATION -->
@@ -453,7 +453,7 @@ nav {
         <div class="absolute top-full left-1/2 -translate-x-1/2
                     hidden group-hover:flex flex-col bg-white shadow-lg
                     rounded-lg p-4 w-56 z-50">
-          <ul class="space-y-2 text-sm">
+          <ul class="space-y-2 text-base">
             <li><a href="fabrication.html" class="text-gray-800 hover:text-yellow-500">Awnings</a></li>
             <li><a href="fabrication.html" class="text-gray-800 hover:text-yellow-500">Car Parking</a></li>
             <li><a href="fabrication.html" class="text-gray-800 hover:text-yellow-500">Tensile Structures</a></li>
@@ -470,7 +470,7 @@ nav {
         <div class="absolute top-full left-1/2 -translate-x-1/2
                     hidden group-hover:flex flex-col bg-white
                     shadow-lg rounded-lg p-4 w-56 z-50">
-          <ul class="space-y-2 text-sm">
+          <ul class="space-y-2 text-base">
             <li><a href="interior.html" class="text-gray-800 hover:text-yellow-500">Furniture Work</a></li>
             <li><a href="interior.html" class="text-gray-800 hover:text-yellow-500">Plumbing</a></li>
             <li><a href="interior.html" class="text-gray-800 hover:text-yellow-500">Electrical Work</a></li>
@@ -492,7 +492,7 @@ nav {
         <div class="absolute top-full left-1/2 -translate-x-1/2
                     hidden group-hover:flex flex-col bg-white
                     shadow-lg rounded-lg p-4 w-56 z-50">
-          <ul class="space-y-2 text-sm">
+          <ul class="space-y-2 text-base">
             <li><a href="civil-work.html" class="text-gray-800 hover:text-yellow-500">Construction</a></li>
             <li><a href="civil-work.html" class="text-gray-800 hover:text-yellow-500">Renovation</a></li>
           </ul>
@@ -507,7 +507,7 @@ nav {
         <div class="absolute top-full left-1/2 -translate-x-1/2
                     hidden group-hover:flex flex-col bg-white
                     shadow-lg rounded-lg p-4 w-56 z-50">
-          <ul class="space-y-2 text-sm">
+          <ul class="space-y-2 text-base">
             <li><a href="exterior.html" class="text-gray-800 hover:text-yellow-500">Society Painting</a></li>
             <li><a href="exterior.html" class="text-gray-800 hover:text-yellow-500">Bungalow Painting</a></li>
             <li><a href="exterior.html" class="text-gray-800 hover:text-yellow-500">Cleaning</a></li>
@@ -524,7 +524,7 @@ nav {
         <div class="absolute top-full left-1/2 -translate-x-1/2
                     hidden group-hover:flex flex-col bg-white
                     shadow-lg rounded-lg p-4 w-56 z-50">
-          <ul class="space-y-2 text-sm">
+          <ul class="space-y-2 text-base">
             <li><a href="other-services.html" class="text-gray-800 hover:text-yellow-500">Waterproofing</a></li>
             <li><a href="other-services.html" class="text-gray-800 hover:text-yellow-500">Housekeeping</a></li>
             <li><a href="other-services.html" class="text-gray-800 hover:text-yellow-500">Society AMC</a></li>
@@ -614,7 +614,7 @@ hamburger.addEventListener("click", () => {
     <div id="bungalow-construction" class="product-details active">
       <div class="grid md:grid-cols-2 gap-12 items-center">
         <div class="h-64 md:h-80">
-          <img src="Products/Bungalow_Construction.jpg" alt="Bungalow Construction" class="w-full h-full object-cover rounded-xl">
+          <img src="New_Imags/91.jpeg" alt="Bungalow Construction" class="w-full h-full object-cover rounded-xl">
         </div>
         <div class="p-10 flex flex-col justify-center">
           <h4 class="text-4xl font-bold mb-6">Bungalow Construction</h4>
@@ -629,7 +629,7 @@ hamburger.addEventListener("click", () => {
     <div id="building-construction" class="product-details">
       <div class="grid md:grid-cols-2 gap-12 items-center">
         <div class="h-64 md:h-80">
-          <img src="Products/building construction.jpg" alt="Building Construction" class="w-full h-full object-cover rounded-xl">
+          <img src="New_Imags/90.jpeg" alt="Building Construction" class="w-full h-full object-cover rounded-xl">
         </div>
         <div class="p-10 flex flex-col justify-center">
           <h4 class="text-4xl font-bold mb-6">Building Construction</h4>
@@ -644,7 +644,7 @@ hamburger.addEventListener("click", () => {
     <div id="bathroom-construction" class="product-details">
       <div class="grid md:grid-cols-2 gap-12 items-center">
         <div class="h-64 md:h-80">
-          <img src="Products/bathroom conts.jpg" alt="Bathroom Construction" class="w-full h-full object-cover rounded-xl">
+          <img src="New_Imags/92.webp" alt="Bathroom Construction" class="w-full h-full object-cover rounded-xl">
         </div>
         <div class="p-10 flex flex-col justify-center">
           <h4 class="text-4xl font-bold mb-6">Bathroom Construction</h4>
@@ -659,7 +659,7 @@ hamburger.addEventListener("click", () => {
     <div id="kitchen-construction" class="product-details">
       <div class="grid md:grid-cols-2 gap-12 items-center">
         <div class="h-64 md:h-80">
-          <img src="Products/kitchen construction.jpg" alt="Kitchen Construction" class="w-full h-full object-cover rounded-xl">
+          <img src="New_Imags/93.webp" alt="Kitchen Construction" class="w-full h-full object-cover rounded-xl">
         </div>
         <div class="p-10 flex flex-col justify-center">
           <h4 class="text-4xl font-bold mb-6">Kitchen Construction</h4>
@@ -686,7 +686,7 @@ hamburger.addEventListener("click", () => {
     <div id="building-renovation" class="product-details active">
       <div class="grid md:grid-cols-2 gap-12 items-center">
         <div class="h-64 md:h-80">
-          <img src="Products/building renov.jpg" alt="Building Renovation" class="w-full h-full object-cover rounded-xl">
+          <img src="New_Imags/94.webp" alt="Building Renovation" class="w-full h-full object-cover rounded-xl">
         </div>
         <div class="p-10 flex flex-col justify-center">
           <h4 class="text-4xl font-bold mb-6">Building Renovation</h4>
@@ -701,7 +701,7 @@ hamburger.addEventListener("click", () => {
     <div id="flooring-tile" class="product-details">
       <div class="grid md:grid-cols-2 gap-12 items-center">
         <div class="h-64 md:h-80">
-          <img src="Products/flooring.jpg" alt="Flooring & Tile Work" class="w-full h-full object-cover rounded-xl">
+          <img src="New_Imags/95.webp" alt="Flooring & Tile Work" class="w-full h-full object-cover rounded-xl">
         </div>
         <div class="p-10 flex flex-col justify-center">
           <h4 class="text-4xl font-bold mb-6">Flooring & Tile Work</h4>
@@ -716,7 +716,7 @@ hamburger.addEventListener("click", () => {
     <div id="wall-demolition" class="product-details">
       <div class="grid md:grid-cols-2 gap-12 items-center">
         <div class="h-64 md:h-80">
-          <img src="Products/wall demolition.jpg" alt="Wall Demolition" class="w-full h-full object-cover rounded-xl">
+          <img src="New_Imags/78.jpeg" alt="Wall Demolition" class="w-full h-full object-cover rounded-xl">
         </div>
         <div class="p-10 flex flex-col justify-center">
           <h4 class="text-4xl font-bold mb-6">Wall Demolition</h4>
@@ -731,7 +731,7 @@ hamburger.addEventListener("click", () => {
     <div id="bathroom-renovation" class="product-details">
       <div class="grid md:grid-cols-2 gap-12 items-center">
         <div class="h-64 md:h-80">
-          <img src="Products/bath renov.jpg" alt="Bathroom Renovation" class="w-full h-full object-cover rounded-xl">
+          <img src="New_Imags/92.webp" alt="Bathroom Renovation" class="w-full h-full object-cover rounded-xl">
         </div>
         <div class="p-10 flex flex-col justify-center">
           <h4 class="text-4xl font-bold mb-6">Bathroom Renovation</h4>
@@ -746,7 +746,7 @@ hamburger.addEventListener("click", () => {
     <div id="kitchen-renovation" class="product-details">
       <div class="grid md:grid-cols-2 gap-12 items-center">
         <div class="h-64 md:h-80">
-          <img src="Products/kitchen renov.jpg" alt="Kitchen Renovation" class="w-full h-full object-cover rounded-xl">
+          <img src="New_Imags/93.webp" alt="Kitchen Renovation" class="w-full h-full object-cover rounded-xl">
         </div>
         <div class="p-10 flex flex-col justify-center">
           <h4 class="text-4xl font-bold mb-6">Kitchen Renovation</h4>
