--- a/exterior.html
+++ b/exterior.html
@@ -368,7 +368,7 @@ nav {
 
     <!-- ⭐ ROW 1: RIGHT TOP MENU -->
     <div class="flex justify-end items-center space-x-8
-                text-gray-800 font-medium text-base py-3">
+                text-gray-800 font-medium text-lg py-3">
 
       <a href="index.html" class="hover:text-yellow-500 desktop-menu">Home</a>
       <a href="about.html" class="hover:text-yellow-500 desktop-menu">About Us</a>
@@ -391,7 +391,7 @@ nav {
 
     <!-- ⭐ ROW 2: CENTERED CATEGORIES -->
     <div class="flex justify-center items-center space-x-12
-                text-gray-900 font-semibold text-[15px] py-2 desktop-menu">
+                text-gray-900 font-semibold text-lg py-2 desktop-menu">
 
       <!-- Same dropdowns here -->
       <!-- FABRICATION -->
@@ -401,7 +401,7 @@ nav {
         <div class="absolute top-full left-1/2 -translate-x-1/2
                     hidden group-hover:flex flex-col bg-white shadow-lg
                     rounded-lg p-4 w-56 z-50">
-          <ul class="space-y-2 text-sm">
+          <ul class="space-y-2 text-base">
             <li><a href="fabrication.html" class="text-gray-800 hover:text-yellow-500">Awnings</a></li>
             <li><a href="fabrication.html" class="text-gray-800 hover:text-yellow-500">Car Parking</a></li>
             <li><a href="fabrication.html" class="text-gray-800 hover:text-yellow-500">Tensile Structures</a></li>
@@ -418,7 +418,7 @@ nav {
         <div class="absolute top-full left-1/2 -translate-x-1/2
                     hidden group-hover:flex flex-col bg-white
                     shadow-lg rounded-lg p-4 w-56 z-50">
-          <ul class="space-y-2 text-sm">
+          <ul class="space-y-2 text-base">
             <li><a href="interior.html" class="text-gray-800 hover:text-yellow-500">Furniture Work</a></li>
             <li><a href="interior.html" class="text-gray-800 hover:text-yellow-500">Plumbing</a></li>
             <li><a href="interior.html" class="text-gray-800 hover:text-yellow-500">Electrical Work</a></li>
@@ -440,7 +440,7 @@ nav {
         <div class="absolute top-full left-1/2 -translate-x-1/2
                     hidden group-hover:flex flex-col bg-white
                     shadow-lg rounded-lg p-4 w-56 z-50">
-          <ul class="space-y-2 text-sm">
+          <ul class="space-y-2 text-base">
             <li><a href="civil-work.html" class="text-gray-800 hover:text-yellow-500">Construction</a></li>
             <li><a href="civil-work.html" class="text-gray-800 hover:text-yellow-500">Renovation</a></li>
           </ul>
@@ -455,7 +455,7 @@ nav {
         <div class="absolute top-full left-1/2 -translate-x-1/2
                     hidden group-hover:flex flex-col bg-white
                     shadow-lg rounded-lg p-4 w-56 z-50">
-          <ul class="space-y-2 text-sm">
+          <ul class="space-y-2 text-base">
             <li><a href="exterior.html" class="text-gray-800 hover:text-yellow-500">Society Painting</a></li>
             <li><a href="exterior.html" class="text-gray-800 hover:text-yellow-500">Bungalow Painting</a></li>
             <li><a href="exterior.html" class="text-gray-800 hover:text-yellow-500">Cleaning</a></li>
@@ -472,7 +472,7 @@ nav {
         <div class="absolute top-full left-1/2 -translate-x-1/2
                     hidden group-hover:flex flex-col bg-white
                     shadow-lg rounded-lg p-4 w-56 z-50">
-          <ul class="space-y-2 text-sm">
+          <ul class="space-y-2 text-base">
             <li><a href="other-services.html" class="text-gray-800 hover:text-yellow-500">Waterproofing</a></li>
             <li><a href="other-services.html" class="text-gray-800 hover:text-yellow-500">Housekeeping</a></li>
             <li><a href="other-services.html" class="text-gray-800 hover:text-yellow-500">Society AMC</a></li>
@@ -553,7 +553,7 @@ hamburger.addEventListener("click", () => {
   <!-- 1. SOCIETY PAINTING -->
   <section id="society" class="exterior-section active">
     <div class="grid lg:grid-cols-2 gap-16 items-center py-20">
-      <div><img src="Products/society ainting.jpg" alt="Society Painting" class="w-full rounded-2xl shadow-2xl"></div>
+      <div><img src="New_Imags/96.webp" alt="Society Painting" class="w-full rounded-2xl shadow-2xl"></div>
       <div class="space-y-8">
         <h2 class="text-4xl md:text-5xl font-bold" style="color:var(--navy)">Society Painting</h2>
         <p class="text-lg text-gray-700 leading-relaxed">Professional exterior painting for societies and apartments using weather-proof, long-lasting paints.</p>
@@ -571,7 +571,7 @@ hamburger.addEventListener("click", () => {
   <!-- 2. BUNGALOW PAINTING -->
   <section id="bungalow" class="exterior-section">
     <div class="grid lg:grid-cols-2 gap-16 items-center py-20 bg-gray-50 rounded-3xl -mx-6 px-6">
-      <div><img src="Products/bungalow painting.jpg" alt="Bungalow Painting" class="w-full rounded-2xl shadow-2xl"></div>
+      <div><img src="New_Imags/97.webp" alt="Bungalow Painting" class="w-full rounded-2xl shadow-2xl"></div>
       <div class="space-y-8">
         <h2 class="text-4xl md:text-5xl font-bold" style="color:var(--navy)">Bungalow Painting</h2>
         <p class="text-lg text-gray-700 leading-relaxed">Premium exterior painting for villas and bungalows with colour consultation and durable finishes.</p>
@@ -589,7 +589,7 @@ hamburger.addEventListener("click", () => {
   <!-- 3. CLEANING SERVICES -->
   <section id="cleaning" class="exterior-section">
     <div class="grid lg:grid-cols-2 gap-16 items-center py-20">
-      <div><img src="Products/cleaning.jpg" alt="Exterior Cleaning" class="w-full rounded-2xl shadow-2xl"></div>
+      <div><img src="New_Imags/98.webp" alt="Exterior Cleaning" class="w-full rounded-2xl shadow-2xl"></div>
       <div class="space-y-8">
         <h2 class="text-4xl md:text-5xl font-bold" style="color:var(--navy)">Exterior Cleaning Services</h2>
         <p class="text-lg text-gray-700 leading-relaxed">Deep cleaning for societies, bungalows, compounds, terraces, and commercial spaces.</p>
