--- a/fabrication.html
+++ b/fabrication.html
@@ -263,7 +263,7 @@ nav {
 
     <!-- ⭐ ROW 1: RIGHT TOP MENU -->
     <div class="flex justify-end items-center space-x-8
-                text-gray-800 font-medium text-base py-3">
+                text-gray-800 font-medium text-lg py-3">
 
       <a href="index.html" class="hover:text-yellow-500 desktop-menu">Home</a>
       <a href="about.html" class="hover:text-yellow-500 desktop-menu">About Us</a>
@@ -286,7 +286,7 @@ nav {
 
     <!-- ⭐ ROW 2: CENTERED CATEGORIES -->
     <div class="flex justify-center items-center space-x-12
-                text-gray-900 font-semibold text-[15px] py-2 desktop-menu">
+                text-gray-900 font-semibold text-lg py-2 desktop-menu">
 
       <!-- Same dropdowns here -->
       <!-- FABRICATION -->
@@ -296,7 +296,7 @@ nav {
         <div class="absolute top-full left-1/2 -translate-x-1/2
                     hidden group-hover:flex flex-col bg-white shadow-lg
                     rounded-lg p-4 w-56 z-50">
-          <ul class="space-y-2 text-sm">
+          <ul class="space-y-2 text-base">
             <li><a href="fabrication.html" class="text-gray-800 hover:text-yellow-500">Awnings</a></li>
             <li><a href="fabrication.html" class="text-gray-800 hover:text-yellow-500">Car Parking</a></li>
             <li><a href="fabrication.html" class="text-gray-800 hover:text-yellow-500">Tensile Structures</a></li>
@@ -313,7 +313,7 @@ nav {
         <div class="absolute top-full left-1/2 -translate-x-1/2
                     hidden group-hover:flex flex-col bg-white
                     shadow-lg rounded-lg p-4 w-56 z-50">
-          <ul class="space-y-2 text-sm">
+          <ul class="space-y-2 text-base">
             <li><a href="interior.html" class="text-gray-800 hover:text-yellow-500">Furniture Work</a></li>
             <li><a href="interior.html" class="text-gray-800 hover:text-yellow-500">Plumbing</a></li>
             <li><a href="interior.html" class="text-gray-800 hover:text-yellow-500">Electrical Work</a></li>
@@ -335,7 +335,7 @@ nav {
         <div class="absolute top-full left-1/2 -translate-x-1/2
                     hidden group-hover:flex flex-col bg-white
                     shadow-lg rounded-lg p-4 w-56 z-50">
-          <ul class="space-y-2 text-sm">
+          <ul class="space-y-2 text-base">
             <li><a href="civil-work.html" class="text-gray-800 hover:text-yellow-500">Construction</a></li>
             <li><a href="civil-work.html" class="text-gray-800 hover:text-yellow-500">Renovation</a></li>
           </ul>
@@ -350,7 +350,7 @@ nav {
         <div class="absolute top-full left-1/2 -translate-x-1/2
                     hidden group-hover:flex flex-col bg-white
                     shadow-lg rounded-lg p-4 w-56 z-50">
-          <ul class="space-y-2 text-sm">
+          <ul class="space-y-2 text-base">
             <li><a href="exterior.html" class="text-gray-800 hover:text-yellow-500">Society Painting</a></li>
             <li><a href="exterior.html" class="text-gray-800 hover:text-yellow-500">Bungalow Painting</a></li>
             <li><a href="exterior.html" class="text-gray-800 hover:text-yellow-500">Cleaning</a></li>
@@ -367,7 +367,7 @@ nav {
         <div class="absolute top-full left-1/2 -translate-x-1/2
                     hidden group-hover:flex flex-col bg-white
                     shadow-lg rounded-lg p-4 w-56 z-50">
-          <ul class="space-y-2 text-sm">
+          <ul class="space-y-2 text-base">
             <li><a href="other-services.html" class="text-gray-800 hover:text-yellow-500">Waterproofing</a></li>
             <li><a href="other-services.html" class="text-gray-800 hover:text-yellow-500">Housekeeping</a></li>
             <li><a href="other-services.html" class="text-gray-800 hover:text-yellow-500">Society AMC</a></li>
@@ -461,7 +461,7 @@ hamburger.addEventListener("click", () => {
         <div class="grid md:grid-cols-2 gap-12 items-center">
 
 
-          <div class="h-64 md:h-80"><img src="Products/retractable awning.jpg" alt="Retractable Awning" class="w-full h-full object-cover"></div>
+          <div class="h-64 md:h-80"><img src="New_Imags/69.jpeg" alt="Retractable Awning" class="w-full h-full object-cover"></div>
           <div class="p-10 flex flex-col justify-center"><h4 class="text-4xl font-bold mb-6">Retractable Awning</h4>
             <p class="text-gray-600 mb-8 leading-relaxed">Motorized or manual awning that extends and retracts smoothly, providing instant
     shade whenever needed. Ideal for balconies, windows, terraces, cafés, outdoor seating 
@@ -481,7 +481,7 @@ hamburger.addEventListener("click", () => {
 
     
     <div class="h-64 md:h-80">
-      <img src="Products/fixed frame.webp" alt="Fixed Frame Awning" class="w-full h-full object-cover">
+      <img src="New_Imags/39.jpeg" alt="Fixed Frame Awning" class="w-full h-full object-cover">
     </div>
 
     <div class="p-10 flex flex-col justify-center">
@@ -510,7 +510,7 @@ hamburger.addEventListener("click", () => {
 
 
     <div class="h-64 md:h-80">
-      <img src="Products/drop awning.jpg" alt="Drop Awning" class="w-full h-full object-cover">
+      <img src="New_Imags/19.jpeg" alt="Drop Awning" class="w-full h-full object-cover">
     </div>
 
     <div class="p-10 flex flex-col justify-center">
@@ -551,7 +551,7 @@ hamburger.addEventListener("click", () => {
   <div class="grid md:grid-cols-2 gap-12 items-center">
     
     <div class="h-64 md:h-80">
-      <img src="Products/tensile car parking.jpg" alt="Tensile Car Parking" 
+      <img src="New_Imags/75.jpeg" alt="Tensile Car Parking" 
            class="w-full h-full object-cover rounded-xl">
     </div>
 
@@ -585,7 +585,7 @@ hamburger.addEventListener("click", () => {
   <div class="grid md:grid-cols-2 gap-12 items-center">
 
     <div class="h-64 md:h-80">
-      <img src="Products/car parking shed.webp" alt="Car Parking Shed"
+      <img src="New_Imags/74.jpeg" alt="Car Parking Shed"
            class="w-full h-full object-cover rounded-xl">
     </div>
 
@@ -619,7 +619,7 @@ hamburger.addEventListener("click", () => {
   <div class="grid md:grid-cols-2 gap-12 items-center">
 
     <div class="h-64 md:h-80">
-      <img src="Products/pvc.jpg" alt="PVC Parking Shade"
+      <img src="New_Imags/71.jpeg" alt="PVC Parking Shade"
            class="w-full h-full object-cover rounded-xl">
     </div>
 
@@ -698,7 +698,7 @@ hamburger.addEventListener("click", () => {
       <div id="single-conical" class="product-details active">
         <div class="grid md:grid-cols-2 gap-12 items-center">
           <div class="h-64 md:h-80">
-            <img src="Products/single conical.jpg" alt="Single Conical Tensile Structure" class="w-full h-full object-cover rounded-xl">
+            <img src="New_Imags/38.jpeg" alt="Single Conical Tensile Structure" class="w-full h-full object-cover rounded-xl">
           </div>
           <div class="p-10 flex flex-col justify-center">
             <h4 class="text-4xl font-bold mb-6">Single Conical Tensile Structure</h4>
@@ -713,7 +713,7 @@ hamburger.addEventListener("click", () => {
       <div id="double-conical" class="product-details">
         <div class="grid md:grid-cols-2 gap-12 items-center">
           <div class="h-64 md:h-80">
-            <img src="Products/double conical.jpg" alt="Double Conical Tensile Structure" class="w-full h-full object-cover rounded-xl">
+            <img src="New_Imags/img2.jpeg" alt="Double Conical Tensile Structure" class="w-full h-full object-cover rounded-xl">
           </div>
           <div class="p-10 flex flex-col justify-center">
             <h4 class="text-4xl font-bold mb-6">Double Conical Tensile Structure</h4>
@@ -728,7 +728,7 @@ hamburger.addEventListener("click", () => {
       <div id="bending-tensile" class="product-details">
         <div class="grid md:grid-cols-2 gap-12 items-center">
           <div class="h-64 md:h-80">
-            <img src="Products/bending.jpg" alt="Bending Tensile Structure" class="w-full h-full object-cover rounded-xl">
+            <img src="New_Imags/44.jpeg" alt="Bending Tensile Structure" class="w-full h-full object-cover rounded-xl">
           </div>
           <div class="p-10 flex flex-col justify-center">
             <h4 class="text-4xl font-bold mb-6">Bending Tensile Structure</h4>
@@ -758,7 +758,7 @@ hamburger.addEventListener("click", () => {
       <div id="tent" class="product-details">
         <div class="grid md:grid-cols-2 gap-12 items-center">
           <div class="h-64 md:h-80">
-            <img src="Products/" alt="Tensile Tent" class="w-full h-full object-cover rounded-xl">
+            <img src="New_Imags/40.jpeg" alt="Tensile Tent" class="w-full h-full object-cover rounded-xl">
           </div>
           <div class="p-10 flex flex-col justify-center">
             <h4 class="text-4xl font-bold mb-6">Tensile Tent</h4>
@@ -773,7 +773,7 @@ hamburger.addEventListener("click", () => {
       <div id="dome" class="product-details">
         <div class="grid md:grid-cols-2 gap-12 items-center">
           <div class="h-64 md:h-80">
-            <img src="Products/dome.jpg" alt="Tensile Dome" class="w-full h-full object-cover rounded-xl">
+            <img src="New_Imags/40.jpeg" alt="Tensile Dome" class="w-full h-full object-cover rounded-xl">
           </div>
           <div class="p-10 flex flex-col justify-center">
             <h4 class="text-4xl font-bold mb-6">Tensile Dome</h4>
@@ -802,7 +802,7 @@ hamburger.addEventListener("click", () => {
       <div id="industrial-shed" class="product-details active">
         <div class="grid md:grid-cols-2 gap-12 items-center">
           <div class="h-64 md:h-80">
-            <img src="Products/industrial shed.jpg" alt="Industrial Shed" class="w-full h-full object-cover rounded-xl">
+            <img src="New_Imags/84.jpeg" alt="Industrial Shed" class="w-full h-full object-cover rounded-xl">
           </div>
           <div class="p-10 flex flex-col justify-center">
             <h4 class="text-4xl font-bold mb-6">Industrial Shed</h4>
@@ -832,7 +832,7 @@ hamburger.addEventListener("click", () => {
       <div id="godown-shed" class="product-details">
         <div class="grid md:grid-cols-2 gap-12 items-center">
           <div class="h-64 md:h-80">
-            <img src="Products/godown.jpg" alt="Godown Shed" class="w-full h-full object-cover rounded-xl">
+            <img src="New_Imags/14.jpeg" alt="Godown Shed" class="w-full h-full object-cover rounded-xl">
           </div>
           <div class="p-10 flex flex-col justify-center">
             <h4 class="text-4xl font-bold mb-6">Godown Shed</h4>
@@ -847,7 +847,7 @@ hamburger.addEventListener("click", () => {
       <div id="shop-shed" class="product-details">
         <div class="grid md:grid-cols-2 gap-12 items-center">
           <div class="h-64 md:h-80">
-            <img src="Products/shop_shade.webp" alt="Shop Shed" class="w-full h-full object-cover rounded-xl">
+            <img src="New_Imags/56.jpeg" alt="Shop Shed" class="w-full h-full object-cover rounded-xl">
           </div>
           <div class="p-10 flex flex-col justify-center">
             <h4 class="text-4xl font-bold mb-6">Shop Shed</h4>
@@ -862,7 +862,7 @@ hamburger.addEventListener("click", () => {
       <div id="balcony-shed" class="product-details">
         <div class="grid md:grid-cols-2 gap-12 items-center">
           <div class="h-64 md:h-80">
-            <img src="Products/Balcony_shade.webp" alt="Balcony Shed" class="w-full h-full object-cover rounded-xl">
+            <img src="New_Imags/img9.jpeg" alt="Balcony Shed" class="w-full h-full object-cover rounded-xl">
           </div>
           <div class="p-10 flex flex-col justify-center">
             <h4 class="text-4xl font-bold mb-6">Balcony Shed</h4>
@@ -877,7 +877,7 @@ hamburger.addEventListener("click", () => {
       <div id="terrace-shed" class="product-details">
         <div class="grid md:grid-cols-2 gap-12 items-center">
           <div class="h-64 md:h-80">
-            <img src="Products/terrace_shade.webp" alt="Terrace Shed" class="w-full h-full object-cover rounded-xl">
+            <img src="New_Imags/85.jpeg" alt="Terrace Shed" class="w-full h-full object-cover rounded-xl">
           </div>
           <div class="p-10 flex flex-col justify-center">
             <h4 class="text-4xl font-bold mb-6">Terrace Shed</h4>
@@ -966,7 +966,7 @@ hamburger.addEventListener("click", () => {
       <div id="gate" class="product-details">
         <div class="grid md:grid-cols-2 gap-12 items-center">
           <div class="h-64 md:h-80">
-            <img src="Products/gate.jpg" alt="Gate" class="w-full h-full object-cover rounded-xl">
+            <img src="New_Imags/24.jpeg" alt="Gate" class="w-full h-full object-cover rounded-xl">
           </div>
           <div class="p-10 flex flex-col justify-center">
             <h4 class="text-4xl font-bold mb-6">Gate</h4>
@@ -981,7 +981,7 @@ hamburger.addEventListener("click", () => {
       <div id="zula" class="product-details">
         <div class="grid md:grid-cols-2 gap-12 items-center">
           <div class="h-64 md:h-80">
-            <img src="Products/zula.jpeg" alt="Zula" class="w-full h-full object-cover rounded-xl">
+            <img src="New_Imags/21.jpeg" alt="Zula" class="w-full h-full object-cover rounded-xl">
           </div>
           <div class="p-10 flex flex-col justify-center">
             <h4 class="text-4xl font-bold mb-6">Zula</h4>
@@ -996,7 +996,7 @@ hamburger.addEventListener("click", () => {
       <div id="balcony-extension" class="product-details">
         <div class="grid md:grid-cols-2 gap-12 items-center">
           <div class="h-64 md:h-80">
-            <img src="Products/Balcony_Extension.webp" alt="Balcony Extension" class="w-full h-full object-cover rounded-xl">
+            <img src="New_Imags/25.jpeg" alt="Balcony Extension" class="w-full h-full object-cover rounded-xl">
           </div>
           <div class="p-10 flex flex-col justify-center">
             <h4 class="text-4xl font-bold mb-6">Balcony Extension</h4>
