--- a/interior.html
+++ b/interior.html
@@ -372,7 +372,7 @@ nav {
 
     <!-- ⭐ ROW 1: RIGHT TOP MENU -->
     <div class="flex justify-end items-center space-x-8
-                text-gray-800 font-medium text-base py-3">
+                text-gray-800 font-medium text-lg py-3">
 
       <a href="index.html" class="hover:text-yellow-500 desktop-menu">Home</a>
       <a href="about.html" class="hover:text-yellow-500 desktop-menu">About Us</a>
@@ -395,7 +395,7 @@ nav {
 
     <!-- ⭐ ROW 2: CENTERED CATEGORIES -->
     <div class="flex justify-center items-center space-x-12
-                text-gray-900 font-semibold text-[15px] py-2 desktop-menu">
+                text-gray-900 font-semibold text-lg py-2 desktop-menu">
 
       <!-- Same dropdowns here -->
       <!-- FABRICATION -->
@@ -405,7 +405,7 @@ nav {
         <div class="absolute top-full left-1/2 -translate-x-1/2
                     hidden group-hover:flex flex-col bg-white shadow-lg
                     rounded-lg p-4 w-56 z-50">
-          <ul class="space-y-2 text-sm">
+          <ul class="space-y-2 text-base">
             <li><a href="fabrication.html" class="text-gray-800 hover:text-yellow-500">Awnings</a></li>
             <li><a href="fabrication.html" class="text-gray-800 hover:text-yellow-500">Car Parking</a></li>
             <li><a href="fabrication.html" class="text-gray-800 hover:text-yellow-500">Tensile Structures</a></li>
@@ -422,7 +422,7 @@ nav {
         <div class="absolute top-full left-1/2 -translate-x-1/2
                     hidden group-hover:flex flex-col bg-white
                     shadow-lg rounded-lg p-4 w-56 z-50">
-          <ul class="space-y-2 text-sm">
+          <ul class="space-y-2 text-base">
             <li><a href="interior.html" class="text-gray-800 hover:text-yellow-500">Furniture Work</a></li>
             <li><a href="interior.html" class="text-gray-800 hover:text-yellow-500">Plumbing</a></li>
             <li><a href="interior.html" class="text-gray-800 hover:text-yellow-500">Electrical Work</a></li>
@@ -444,7 +444,7 @@ nav {
         <div class="absolute top-full left-1/2 -translate-x-1/2
                     hidden group-hover:flex flex-col bg-white
                     shadow-lg rounded-lg p-4 w-56 z-50">
-          <ul class="space-y-2 text-sm">
+          <ul class="space-y-2 text-base">
             <li><a href="civil-work.html" class="text-gray-800 hover:text-yellow-500">Construction</a></li>
             <li><a href="civil-work.html" class="text-gray-800 hover:text-yellow-500">Renovation</a></li>
           </ul>
@@ -459,7 +459,7 @@ nav {
         <div class="absolute top-full left-1/2 -translate-x-1/2
                     hidden group-hover:flex flex-col bg-white
                     shadow-lg rounded-lg p-4 w-56 z-50">
-          <ul class="space-y-2 text-sm">
+          <ul class="space-y-2 text-base">
             <li><a href="exterior.html" class="text-gray-800 hover:text-yellow-500">Society Painting</a></li>
             <li><a href="exterior.html" class="text-gray-800 hover:text-yellow-500">Bungalow Painting</a></li>
             <li><a href="exterior.html" class="text-gray-800 hover:text-yellow-500">Cleaning</a></li>
@@ -476,7 +476,7 @@ nav {
         <div class="absolute top-full left-1/2 -translate-x-1/2
                     hidden group-hover:flex flex-col bg-white
                     shadow-lg rounded-lg p-4 w-56 z-50">
-          <ul class="space-y-2 text-sm">
+          <ul class="space-y-2 text-base">
             <li><a href="other-services.html" class="text-gray-800 hover:text-yellow-500">Waterproofing</a></li>
             <li><a href="other-services.html" class="text-gray-800 hover:text-yellow-500">Housekeeping</a></li>
             <li><a href="other-services.html" class="text-gray-800 hover:text-yellow-500">Society AMC</a></li>
